# PoopOk

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  pyproject.toml  styles.css
PoopOk/: manage.py
PoopOk/PoopOk/: asgi.py  settings.py  urls.py  wsgi.py
PoopOk/attacks/: apps.py
PoopOk/news/: models.py  views.py
PoopOk/news/templates/news/: create_post.html  post_detail.html  post_list.html
poopok/: manage.py
poopok/poopok/: asgi.py  settings.py  urls.py  wsgi.py
poopok/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
poopok/users/migrations/: 0001_initial.py
src/sources/form/: form.css  form.html  form.jsx  styles.css
